--- a/PhysicsGame.vcxproj
+++ b/PhysicsGame.vcxproj
@@ -209,6 +209,8 @@
     <ClCompile Include="Source\ModuleAssetLoader.cpp" />
     <ClCompile Include="Source\ModuleAudio.cpp" />
     <ClCompile Include="Source\ModuleUserPreferences.cpp" />
+    <ClCompile Include="Source\RaceMode.cpp" />
+    <ClCompile Include="Source\RaceMode.h" />
     <ClCompile Include="Source\SceneGame.cpp" />
     <ClCompile Include="Source\ModuleLocalization.cpp" />
     <ClCompile Include="Source\SceneOptions.cpp" />
@@ -239,6 +241,7 @@
     <ClInclude Include="Source\external\pugi\pugiconfig.hpp" />
     <ClInclude Include="Source\external\pugi\pugixml.hpp" />
     <ClInclude Include="Source\FontCreator.h" />
+    <ClInclude Include="Source\GameMode.h" />
     <ClInclude Include="Source\Globals.h" />
     <ClInclude Include="Source\MapLapSensor.h" />
     <ClInclude Include="Source\MapObject.h" />
