--- a/PhysicsGame.vcxproj
+++ b/PhysicsGame.vcxproj
@@ -197,6 +197,7 @@
   <ItemGroup>
     <ClCompile Include="Source\AnimationSystem.cpp" />
     <ClCompile Include="Source\Application.cpp" />
+    <ClCompile Include="Source\BoomMode.cpp" />
     <ClCompile Include="Source\Box2DFactory.cpp" />
     <ClCompile Include="Source\CollisionSensor.cpp" />
     <ClCompile Include="Source\CollisionsDispatcher.cpp" />
@@ -234,6 +235,7 @@
   <ItemGroup>
     <ClInclude Include="Source\AnimationSystem.h" />
     <ClInclude Include="Source\Application.h" />
+    <ClInclude Include="Source\BoomMode.h" />
     <ClInclude Include="Source\Box2DFactory.h" />
     <ClInclude Include="Source\CollisionSensor.h" />
     <ClInclude Include="Source\CollisionsDispatcher.h" />
