--- a/PhysicsGame.vcxproj.filters
+++ b/PhysicsGame.vcxproj.filters
@@ -63,7 +63,7 @@
     </Filter>
     <Filter Include="GameModes\Type %28GameMode%29">
       <UniqueIdentifier>{63c2187a-8b6a-4ebd-9cb5-77a0576fb2c3}</UniqueIdentifier>
-	</Filter>
+    </Filter>
     <Filter Include="MapObjects\Type %28MapObjects%29\Map">
       <UniqueIdentifier>{5c245351-c5ea-426a-8dff-2d92f1d21dab}</UniqueIdentifier>
     </Filter>
@@ -166,9 +166,12 @@
     </ClCompile>
     <ClCompile Include="Source\RaceMode.cpp">
       <Filter>GameModes\Type %28GameMode%29</Filter>
-	</ClCompile>
+    </ClCompile>
     <ClCompile Include="Source\RaceTrack.cpp">
       <Filter>MapObjects\Type %28MapObjects%29\Map</Filter>
+    </ClCompile>
+    <ClCompile Include="Source\Tree.cpp">
+      <Filter>MapObjects</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -284,9 +287,12 @@
     </ClInclude>
     <ClInclude Include="Source\GameMode.h">
       <Filter>GameModes</Filter>
-	</ClInclude>
+    </ClInclude>
     <ClInclude Include="Source\RaceTrack.h">
       <Filter>MapObjects\Type %28MapObjects%29\Map</Filter>
+    </ClInclude>
+    <ClInclude Include="Source\Tree.h">
+      <Filter>MapObjects</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
