--- a/PhysicsGame.vcxproj
+++ b/PhysicsGame.vcxproj
@@ -226,6 +226,7 @@
     <ClCompile Include="Source\ParticleSystem.cpp" />
     <ClCompile Include="Source\SceneSelectSetup.cpp" />
     <ClCompile Include="Source\Timer.cpp" />
+    <ClCompile Include="Source\Tree.cpp" />
     <ClCompile Include="Source\UIButton.cpp" />
     <ClCompile Include="Source\UISlider.cpp" />
     <ClCompile Include="Source\Vehicle.cpp" />
@@ -267,6 +268,7 @@
     <ClInclude Include="Source\ParticleSystem.h" />
     <ClInclude Include="Source\SceneSelectSetup.h" />
     <ClInclude Include="Source\Timer.h" />
+    <ClInclude Include="Source\Tree.h" />
     <ClInclude Include="Source\UIButton.h" />
     <ClInclude Include="Source\UIElement.h" />
     <ClInclude Include="Source\UISlider.h" />
