--- a/PhysicsGame.vcxproj
+++ b/PhysicsGame.vcxproj
@@ -210,6 +210,7 @@
     <ClCompile Include="Source\ModuleAudio.cpp" />
     <ClCompile Include="Source\ModuleUserPreferences.cpp" />
     <ClCompile Include="Source\PauseMenu.cpp" />
+    <ClCompile Include="Source\Player.cpp" />
     <ClCompile Include="Source\RaceTrack.cpp" />
     <ClCompile Include="Source\SceneGame.cpp" />
     <ClCompile Include="Source\ModuleLocalization.cpp" />
@@ -250,6 +251,7 @@
     <ClInclude Include="Source\ModuleAudio.h" />
     <ClInclude Include="Source\ModuleUserPreferences.h" />
     <ClInclude Include="Source\PauseMenu.h" />
+    <ClInclude Include="Source\Player.h" />
     <ClInclude Include="Source\RaceTrack.h" />
     <ClInclude Include="Source\SceneGame.h" />
     <ClInclude Include="Source\ModuleLocalization.h" />
