--- a/PhysicsGame.vcxproj.filters
+++ b/PhysicsGame.vcxproj.filters
@@ -61,6 +61,9 @@
     <Filter Include="MapObjects\Type %28MapObjects%29\Map">
       <UniqueIdentifier>{5c245351-c5ea-426a-8dff-2d92f1d21dab}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Others">
+      <UniqueIdentifier>{095b874f-5e0a-481b-a854-9782577ca356}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Source\ModuleAssetLoader.cpp">
@@ -158,7 +161,12 @@
     <ClCompile Include="Source\RaceTrack.cpp">
       <Filter>MapObjects\Type %28MapObjects%29\Map</Filter>
     </ClCompile>
-    <ClCompile Include="Source\PauseMenu.cpp" />
+    <ClCompile Include="Source\PauseMenu.cpp">
+      <Filter>Others</Filter>
+    </ClCompile>
+    <ClCompile Include="Source\Player.cpp">
+      <Filter>Others</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Source\ModuleAssetLoader.h">
@@ -274,7 +282,12 @@
     <ClInclude Include="Source\RaceTrack.h">
       <Filter>MapObjects\Type %28MapObjects%29\Map</Filter>
     </ClInclude>
-    <ClInclude Include="Source\PauseMenu.h" />
+    <ClInclude Include="Source\PauseMenu.h">
+      <Filter>Others</Filter>
+    </ClInclude>
+    <ClInclude Include="Source\Player.h">
+      <Filter>Others</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <Xml Include="Assets\Data\vehicle_data.xml">
