--- a/PhysicsGame.vcxproj.filters
+++ b/PhysicsGame.vcxproj.filters
@@ -73,6 +73,12 @@
     <Filter Include="Pilot">
       <UniqueIdentifier>{d321f8b6-508f-42ba-b617-368340778b8c}</UniqueIdentifier>
     </Filter>
+    <Filter Include="MapObjects\Type %28MapObjects%29\Pilots">
+      <UniqueIdentifier>{b1d10c72-021a-4e56-a438-5f5678843c20}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="MapObjects\Type %28MapObjects%29\Pilots\Type %28Pilot%29">
+      <UniqueIdentifier>{892e5f92-ff84-4d1d-b9e4-a058ee397201}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Source\ModuleAssetLoader.cpp">
@@ -182,11 +188,11 @@
     <ClCompile Include="Source\PauseMenu.cpp">
       <Filter>Others</Filter>
     </ClCompile>
-    <ClCompile Include="Source\Player.cpp">
-      <Filter>Pilot</Filter>
-    </ClCompile>
     <ClCompile Include="Source\Pilot.cpp">
-      <Filter>Pilot</Filter>
+      <Filter>MapObjects\Type %28MapObjects%29\Pilots</Filter>
+    </ClCompile>
+    <ClCompile Include="Source\Player.cpp">
+      <Filter>MapObjects\Type %28MapObjects%29\Pilots\Type %28Pilot%29</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -312,11 +318,11 @@
     <ClInclude Include="Source\PauseMenu.h">
       <Filter>Others</Filter>
     </ClInclude>
-    <ClInclude Include="Source\Player.h">
-      <Filter>Pilot</Filter>
-    </ClInclude>
     <ClInclude Include="Source\Pilot.h">
-      <Filter>Pilot</Filter>
+      <Filter>MapObjects\Type %28MapObjects%29\Pilots</Filter>
+    </ClInclude>
+    <ClInclude Include="Source\Player.h">
+      <Filter>MapObjects\Type %28MapObjects%29\Pilots\Type %28Pilot%29</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
