--- a/PhysicsGame.vcxproj.filters
+++ b/PhysicsGame.vcxproj.filters
@@ -70,9 +70,6 @@
     <Filter Include="Others">
       <UniqueIdentifier>{942bf262-2bea-4923-90f9-c8e8543062c8}</UniqueIdentifier>
     </Filter>
-    <Filter Include="Pilot">
-      <UniqueIdentifier>{d321f8b6-508f-42ba-b617-368340778b8c}</UniqueIdentifier>
-    </Filter>
     <Filter Include="MapObjects\Type %28MapObjects%29\Pilots">
       <UniqueIdentifier>{b1d10c72-021a-4e56-a438-5f5678843c20}</UniqueIdentifier>
     </Filter>
@@ -192,6 +189,9 @@
       <Filter>MapObjects\Type %28MapObjects%29\Pilots</Filter>
     </ClCompile>
     <ClCompile Include="Source\Player.cpp">
+      <Filter>MapObjects\Type %28MapObjects%29\Pilots\Type %28Pilot%29</Filter>
+    </ClCompile>
+    <ClCompile Include="Source\PilotCPU.cpp">
       <Filter>MapObjects\Type %28MapObjects%29\Pilots\Type %28Pilot%29</Filter>
     </ClCompile>
   </ItemGroup>
@@ -322,6 +322,9 @@
       <Filter>MapObjects\Type %28MapObjects%29\Pilots</Filter>
     </ClInclude>
     <ClInclude Include="Source\Player.h">
+      <Filter>MapObjects\Type %28MapObjects%29\Pilots\Type %28Pilot%29</Filter>
+    </ClInclude>
+    <ClInclude Include="Source\PilotCPU.h">
       <Filter>MapObjects\Type %28MapObjects%29\Pilots\Type %28Pilot%29</Filter>
     </ClInclude>
   </ItemGroup>
