--- a/PhysicsGame.vcxproj.filters
+++ b/PhysicsGame.vcxproj.filters
@@ -179,9 +179,9 @@
     <ClCompile Include="Source\RaceTrack.cpp">
       <Filter>MapObjects\Type %28MapObjects%29\Map</Filter>
     </ClCompile>
-    <ClCompile Include="Source\Tree.cpp">
+    <ClCompile Include="Source\Obstacle.cpp">
       <Filter>MapObjects</Filter>
-	</ClCompile>
+    </ClCompile>
     <ClCompile Include="Source\BoomMode.cpp">
       <Filter>GameModes\Type %28GameMode%29</Filter>
     </ClCompile>
@@ -200,6 +200,10 @@
     <ClCompile Include="Source\SceneResults.cpp">
       <Filter>Modules\Type %28Module%29\Scene %28ModueScene%29</Filter>
     </ClCompile>
+    <ClCompile Include="Source\PushableObstacle.cpp">
+      <Filter>MapObjects</Filter>
+    </ClCompile>
+    <ClCompile Include="Source\Tree.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Source\ModuleAssetLoader.h">
@@ -318,9 +322,9 @@
     <ClInclude Include="Source\RaceTrack.h">
       <Filter>MapObjects\Type %28MapObjects%29\Map</Filter>
     </ClInclude>
-    <ClInclude Include="Source\Tree.h">
+    <ClInclude Include="Source\Obstacle.h">
       <Filter>MapObjects</Filter>
-	</ClInclude>
+    </ClInclude>
     <ClInclude Include="Source\BoomMode.h">
       <Filter>GameModes\Type %28GameMode%29</Filter>
     </ClInclude>
@@ -338,6 +342,12 @@
     </ClInclude>
     <ClInclude Include="Source\SceneResults.h">
       <Filter>Modules\Type %28Module%29\Scene %28ModueScene%29</Filter>
+    </ClInclude>
+    <ClInclude Include="Source\PushableObstacle.h">
+      <Filter>MapObjects</Filter>
+    </ClInclude>
+    <ClInclude Include="Source\Tree.h">
+      <Filter>MapObjects</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
