--- a/PhysicsGame.vcxproj
+++ b/PhysicsGame.vcxproj
@@ -204,6 +204,7 @@
     <ClCompile Include="Source\CursorChanger.cpp" />
     <ClCompile Include="Source\DriftParticle.cpp" />
     <ClCompile Include="Source\external\pugi\pugixml.cpp" />
+    <ClCompile Include="Source\FixedObstacle.cpp" />
     <ClCompile Include="Source\Log.cpp" />
     <ClCompile Include="Source\Main.cpp" />
     <ClCompile Include="Source\MapLapSensor.cpp" />
@@ -218,6 +219,7 @@
     <ClCompile Include="Source\RaceMode.cpp" />
     <ClCompile Include="Source\RaceMode.h" />
     <ClCompile Include="Source\RaceTrack.cpp" />
+    <ClCompile Include="Source\Rock.cpp" />
     <ClCompile Include="Source\SceneGame.cpp" />
     <ClCompile Include="Source\ModuleLocalization.cpp" />
     <ClCompile Include="Source\SceneOptions.cpp" />
@@ -251,6 +253,7 @@
     <ClInclude Include="Source\DriftParticle.h" />
     <ClInclude Include="Source\external\pugi\pugiconfig.hpp" />
     <ClInclude Include="Source\external\pugi\pugixml.hpp" />
+    <ClInclude Include="Source\FixedObstacle.h" />
     <ClInclude Include="Source\FontCreator.h" />
     <ClInclude Include="Source\GameMode.h" />
     <ClInclude Include="Source\Globals.h" />
@@ -267,6 +270,7 @@
     <ClInclude Include="Source\Player.h" />
     <ClInclude Include="Source\PushableObstacle.h" />
     <ClInclude Include="Source\RaceTrack.h" />
+    <ClInclude Include="Source\Rock.h" />
     <ClInclude Include="Source\SceneGame.h" />
     <ClInclude Include="Source\ModuleLocalization.h" />
     <ClInclude Include="Source\SceneOptions.h" />
