--- a/PhysicsGame.vcxproj
+++ b/PhysicsGame.vcxproj
@@ -199,11 +199,13 @@
     <ClCompile Include="Source\Application.cpp" />
     <ClCompile Include="Source\BoomMode.cpp" />
     <ClCompile Include="Source\Box2DFactory.cpp" />
+    <ClCompile Include="Source\BreakableObstacle.cpp" />
     <ClCompile Include="Source\CollisionSensor.cpp" />
     <ClCompile Include="Source\CollisionsDispatcher.cpp" />
     <ClCompile Include="Source\CursorChanger.cpp" />
     <ClCompile Include="Source\DriftParticle.cpp" />
     <ClCompile Include="Source\external\pugi\pugixml.cpp" />
+    <ClCompile Include="Source\Fence.cpp" />
     <ClCompile Include="Source\FixedObstacle.cpp" />
     <ClCompile Include="Source\Log.cpp" />
     <ClCompile Include="Source\Main.cpp" />
@@ -247,12 +249,14 @@
     <ClInclude Include="Source\Application.h" />
     <ClInclude Include="Source\BoomMode.h" />
     <ClInclude Include="Source\Box2DFactory.h" />
+    <ClInclude Include="Source\BreakableObstacle.h" />
     <ClInclude Include="Source\CollisionSensor.h" />
     <ClInclude Include="Source\CollisionsDispatcher.h" />
     <ClInclude Include="Source\CursorChanger.h" />
     <ClInclude Include="Source\DriftParticle.h" />
     <ClInclude Include="Source\external\pugi\pugiconfig.hpp" />
     <ClInclude Include="Source\external\pugi\pugixml.hpp" />
+    <ClInclude Include="Source\Fence.h" />
     <ClInclude Include="Source\FixedObstacle.h" />
     <ClInclude Include="Source\FontCreator.h" />
     <ClInclude Include="Source\GameMode.h" />
