--- a/PhysicsGame.vcxproj
+++ b/PhysicsGame.vcxproj
@@ -231,6 +231,7 @@
     <ClCompile Include="Source\ParticleSystem.cpp" />
     <ClCompile Include="Source\SceneResults.cpp" />
     <ClCompile Include="Source\SceneSelectSetup.cpp" />
+    <ClCompile Include="Source\SceneVehicleSelectSetup.cpp" />
     <ClCompile Include="Source\Timer.cpp" />
     <ClCompile Include="Source\UIButton.cpp" />
     <ClCompile Include="Source\UISlider.cpp" />
@@ -278,6 +279,7 @@
     <ClInclude Include="Source\ParticleSystem.h" />
     <ClInclude Include="Source\SceneResults.h" />
     <ClInclude Include="Source\SceneSelectSetup.h" />
+    <ClInclude Include="Source\SceneVehicleSelectSetup.h" />
     <ClInclude Include="Source\Timer.h" />
     <ClInclude Include="Source\UIButton.h" />
     <ClInclude Include="Source\UIElement.h" />
