--- a/PhysicsGame.vcxproj.filters
+++ b/PhysicsGame.vcxproj.filters
@@ -197,6 +197,9 @@
     <ClCompile Include="Source\SceneResults.cpp">
       <Filter>Modules\Type %28Module%29\Scene %28ModueScene%29</Filter>
     </ClCompile>
+    <ClCompile Include="Source\SceneVehicleSelectSetup.cpp">
+      <Filter>Modules\Type %28Module%29\Scene %28ModueScene%29</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Source\ModuleAssetLoader.h">
@@ -331,6 +334,9 @@
       <Filter>MapObjects\Type %28MapObjects%29\Pilots\Type %28Pilot%29</Filter>
     </ClInclude>
     <ClInclude Include="Source\SceneResults.h">
+      <Filter>Modules\Type %28Module%29\Scene %28ModueScene%29</Filter>
+    </ClInclude>
+    <ClInclude Include="Source\SceneVehicleSelectSetup.h">
       <Filter>Modules\Type %28Module%29\Scene %28ModueScene%29</Filter>
     </ClInclude>
   </ItemGroup>
