--- a/PhysicsGame.vcxproj.filters
+++ b/PhysicsGame.vcxproj.filters
@@ -223,6 +223,7 @@
     </ClCompile>
     <ClCompile Include="Source\Fence.cpp">
       <Filter>MapObjects\Type %28MapObjects%29\Obstacles\Type %28Obstacle%29</Filter>
+	</ClCompile>
     <ClCompile Include="Source\SceneVehicleSelectSetup.cpp">
       <Filter>Modules\Type %28Module%29\Scene %28ModueScene%29</Filter>
     </ClCompile>
@@ -382,6 +383,7 @@
     </ClInclude>
     <ClInclude Include="Source\Fence.h">
       <Filter>MapObjects\Type %28MapObjects%29\Obstacles\Type %28Obstacle%29</Filter>
+	</ClInclude>
     <ClInclude Include="Source\SceneVehicleSelectSetup.h">
       <Filter>Modules\Type %28Module%29\Scene %28ModueScene%29</Filter>
     </ClInclude>
