--- a/PhysicsGame.vcxproj.filters
+++ b/PhysicsGame.vcxproj.filters
@@ -227,6 +227,9 @@
     <ClCompile Include="Source\SceneVehicleSelectSetup.cpp">
       <Filter>Modules\Type %28Module%29\Scene %28ModueScene%29</Filter>
     </ClCompile>
+    <ClCompile Include="Source\UIToggle.cpp">
+      <Filter>Systems\UI Elements\Type %28UI Elements%29</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Source\ModuleAssetLoader.h">
@@ -386,6 +389,9 @@
     </ClInclude>
     <ClInclude Include="Source\SceneVehicleSelectSetup.h">
       <Filter>Modules\Type %28Module%29\Scene %28ModueScene%29</Filter>
+    </ClInclude>
+    <ClInclude Include="Source\UIToggle.h">
+      <Filter>Systems\UI Elements\Type %28UI Elements%29</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
