Fix GameMode error

--- a/PhysicsGame.vcxproj.filters
+++ b/PhysicsGame.vcxproj.filters
@@ -176,12 +176,6 @@
     <ClCompile Include="Source\ModuleUserPreferences.cpp">
       <Filter>Modules\Type %28Module%29</Filter>
     </ClCompile>
-    <ClCompile Include="Source\RaceMode.h">
-      <Filter>GameModes\Type %28GameMode%29</Filter>
-    </ClCompile>
-    <ClCompile Include="Source\RaceMode.cpp">
-      <Filter>GameModes\Type %28GameMode%29</Filter>
-    </ClCompile>
     <ClCompile Include="Source\RaceTrack.cpp">
       <Filter>MapObjects\Type %28MapObjects%29\Map</Filter>
     </ClCompile>
@@ -229,6 +223,9 @@
     </ClCompile>
     <ClCompile Include="Source\UIToggle.cpp">
       <Filter>Systems\UI Elements\Type %28UI Elements%29</Filter>
+    </ClCompile>
+    <ClCompile Include="Source\RaceMode.cpp">
+      <Filter>GameModes\Type %28GameMode%29</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -392,6 +389,9 @@
     </ClInclude>
     <ClInclude Include="Source\UIToggle.h">
       <Filter>Systems\UI Elements\Type %28UI Elements%29</Filter>
+    </ClInclude>
+    <ClInclude Include="Source\RaceMode.h">
+      <Filter>GameModes\Type %28GameMode%29</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
