--- a/PhysicsGame.vcxproj
+++ b/PhysicsGame.vcxproj
@@ -219,7 +219,6 @@
     <ClCompile Include="Source\Player.cpp" />
     <ClCompile Include="Source\PushableObstacle.cpp" />
     <ClCompile Include="Source\RaceMode.cpp" />
-    <ClCompile Include="Source\RaceMode.h" />
     <ClCompile Include="Source\RaceTrack.cpp" />
     <ClCompile Include="Source\RockObstacle.cpp" />
     <ClCompile Include="Source\SceneGame.cpp" />
@@ -275,6 +274,7 @@
     <ClInclude Include="Source\PilotCPU.h" />
     <ClInclude Include="Source\Player.h" />
     <ClInclude Include="Source\PushableObstacle.h" />
+    <ClInclude Include="Source\RaceMode.h" />
     <ClInclude Include="Source\RaceTrack.h" />
     <ClInclude Include="Source\RockObstacle.h" />
     <ClInclude Include="Source\SceneGame.h" />
